--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-GOOGLE_API_KEY=AIzaSyDX0Woqebz0k9JTcTA9eLspPEbHqdLdVko
+# Google API Key for Gemini AI
+GOOGLE_API_KEY=your_api_key_here
+
+# Environment (development/production)
+FLASK_ENV=development
+
+# Debug mode
+DEBUG=True 
